fix: remove extra paddings on contacts form loader

--- a/src/app/components/shop/components/contacts-form/contacts-form.component.scss
+++ b/src/app/components/shop/components/contacts-form/contacts-form.component.scss
@@ -26,14 +26,6 @@
       text-decoration: none;
     }
   }
-
-  &__loader {
-    padding-top: 8px;
-  }
-
-  &__actions {
-    padding-top: 0;
-  }
 }
 
 input:-webkit-autofill,
